# ChangeLog for app-admin/eselect-opencl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-opencl/ChangeLog,v 1.10 2014/06/04 02:47:55 patrick Exp $

  04 Jun 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Take over as maintainer

*eselect-opencl-1.1.0-r2 (04 Jun 2014)

  04 Jun 2014; Patrick Lauer <patrick@gentoo.org>
  +eselect-opencl-1.1.0-r2.ebuild:
  Bump of OpenCL headers for #496418, not keyworded as it may need more testing

  24 Mar 2014; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Drop maintainership

  04 Feb 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  eselect-opencl-1.1.0-r1.ebuild:
  Keyword ~ppc.

  16 May 2012; Alexis Ballier <aballier@gentoo.org>
  eselect-opencl-1.1.0-r1.ebuild:
  keyword ~amd64-fbsd

  24 Apr 2012; Alexis Ballier <aballier@gentoo.org>
  eselect-opencl-1.1.0-r1.ebuild:
  keyword ~x86-fbsd

  14 Apr 2012; Markus Meier <maekke@gentoo.org> eselect-opencl-1.1.0-r1.ebuild:
  x86 stable, bug #409073

  20 Mar 2012; Agostino Sarubbo <ago@gentoo.org>
  eselect-opencl-1.1.0-r1.ebuild:
  Stable for amd64, wrt bug #408905

*eselect-opencl-1.1.0-r1 (17 Feb 2012)

  17 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org>
  +eselect-opencl-1.1.0-r1.ebuild:
  Revbump that properly links C++ header

*eselect-opencl-1.1.0 (21 Jan 2012)

  21 Jan 2012; Kacper Kowalik <xarthisius@gentoo.org>
  +eselect-opencl-1.1.0.ebuild, +metadata.xml:
  Initial import