@@ -9,7 +9,7 @@ DIST eselect-opencl-1.1.0.tar.xz 3272 SHA256 0b49d847d4475119f969fc7bbcdc4ceb190
 DIST opencl-headers-1.2.tar.gz 122068 SHA256 c35c1aada9984b24784d6b6a5752e22b9c70646043344e0f45830c9dc5ae28c4 SHA512 0780c96d47a7ad41f6b31d46d41be77651d27d5decd1a4248c452d8bf763b6fc3b76597352bd259778c5846c62c17f077ff8db5504da39844c8e6e07c7d9a264 WHIRLPOOL 4f5c1058d23f91d806dba861fefd5cf3685a12a78217136adc0ac2f630995c82fa6d537e3cd67b6b2e2d01b6de12c30dc7e039b9aaa057661deb7f10a466f48d
 DIST opencl.h.1.1.xz 944 SHA256 c076e410eaffd9fbb056528f31a59fe1908481f0fd38981c13970727a0c4d096 SHA512 62b5ae61f2d9a44e9f8b6a7e3421cacfe5291bc9b5430845d469ea5a6404d71d3ab49d78c6da2588eab2bcd5f9b0d86c53f3aa74bd7c43c960ad86f0eab9595c WHIRLPOOL bd3d946b6c361187d9d7c4337287c24161fc0f291cfc810c0bcf05d9fe120192a853fe7b69500783b7ec1994e9b265d84eb82b8fc681df060c16aa3d038c8374
 EBUILD eselect-opencl-1.1.0-r1.ebuild 1747 SHA256 bbe039a9617e592c04e692f3c755957463612769151d4b927438a79611904e01 SHA512 2b8d657d97fe59905dcba27dd3a17ea5bbc725af239afdfa2fc5762702c37b40a688fb780f8f64ff1df145ea0be7355b52494144c2e33cba9782904ecd152378 WHIRLPOOL f687748e4f4be6fb67706a36af4934d03cd74ea6687e0d702b7dae56961e4d1561fc64e39a2d6f554bdfb550add87217df360b63c289df6ab01d35557bfef4cf
-EBUILD eselect-opencl-1.1.0-r2.ebuild 2097 SHA256 b776e4112ef83530796b96a2408747b5ab35402b41b693300c5cc0999977a46d SHA512 aac0783d3506cd746ba527bcbe21af7ce5ef1c134fbf03a8c0c6d9ab306ba003b7c893d25b3c6e6f211282e6195619037a23043e9cac138b40130726e9a1ac04 WHIRLPOOL bb34a2a37d3ae296784b864747ae33bb12f09370b072439da72000ed4a2dae371f3d5fca5eab48ebcfd8afa43f9544b0820dc185458d052e06da37c2527719c6
+EBUILD eselect-opencl-1.1.0-r2.ebuild 2070 SHA256 553b968c0109b0b0b0a4bc85f7e9a4ba21921a15029f3843f27075d3df645693 SHA512 563db5b3f375f842e9ff55fe7cc29f41296e53d7163f4f51bd610f0a4e334d812e333830c494de7060c4bffce86c4cba4f2127887589bb8eb2d61a9be0b8874b WHIRLPOOL 97b621a91fcc9ace55a5e0173d1e451e1e2dfc498cc7f50ba096f71b5a9d06c483c71329b01ad9ac4ad96d0e6ad299cdd54cd4a8df1ad81cd93150e3ebe0966e
 EBUILD eselect-opencl-1.1.0.ebuild 1718 SHA256 7ab090850033d5dac488dd3170800911a0267168a964e80b6980361c298f5741 SHA512 8dc7fd1d44e3ade16e293f7a02fca584f90cf1db0be205c9dcc5a0915a3a9d3625973c8c2b4e92b8dd6993343dcf688b9add85e2a6eed16a0f6d64ed787228cc WHIRLPOOL 5b1d1da8c4a10dc2ac7b432b3ddbd792699ee981d8f1afaf55d4114d6bcdec58f329586cb9a9acb8e5ffc2730dbb3a2edf592cc17916d5482254da642415d50c
-MISC ChangeLog 1500 SHA256 4fdf5649d37feaa4fd1994e71f5360d817a77d39e8726143b3ef6ee2c7b18cf9 SHA512 b5a40f4666a34a81441e95935db1372bf3d7f18b00dd869773c957b7c61705c55d07fd717cc39515351b39e3f50d8868f90239e372d6ce05db08bc832d080837 WHIRLPOOL 444ae3b36c2a9f74774d407bfe03fd0863811691f778240ff3b77ccbdf4bc4b06f25eda4a99052504a3ae25312283246982eabb76f1487c188c7da0d74ef0f24
+MISC ChangeLog 1615 SHA256 aa104b42e6915daf64c1f6987e5bc686eb61a4ff83c9b634d0685f98118ed7f2 SHA512 a0d5536ac96a8d522fe8665ca1eb6c54ecbb14be3e08844310c652cfc5cddf2e81a82f85528c6a4d65f96328964437f992d1cab065d26cdb5ee0a9f973a34702 WHIRLPOOL 07a3cdbb9d37eaa61a0f7ee0573a577b56e4dd9f9572d6f947f00b5269b49dd9714b2f6b38f8de4190a1fc0fa31d296a26cb27fe687dae681297eb251104b781
 MISC metadata.xml 313 SHA256 838a632baaaf971bcef8b261991717e4c2873a6072c8e0b1046c8b7289c68d0b SHA512 5e89e304beecff81094d807d824242db5c0fc1c9423a199c327bb9191856d79225c1cc58427669cb53e8c0ce7eb03b538443bdca14fd150fd403b2cfc9549ac4 WHIRLPOOL 9fc847ed84932320f128d0b3bcc50d0c79a6f0d1bdfcf89dbff631d0459b9e1a11843139b935d8c0f705a8a2f6d7ca101e7b4dba9fa59bf55c415569a2245f44
