@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST natsort-3.2.0.tar.gz 14223 SHA256 283d488e4d3bb5f1a2bd7ed5d28c9d467e56fe9636f1d373f42357eb60a355f8 SHA512 bd6022d8d488a2391820ce8f06391b3c52c77a3ecd74d58bd18bf6af3a2648f6f8b502c4fb68899176eb83015d23d91dc8a8d1918fba0db63bc85d7902bc4205 WHIRLPOOL 398cac91e22054e1cab3d4c9017a4eaf4917afb66c3a4cc528968b5def40f207616cbe7e32fee15469dd39dc4cc288d964900d1d93a7430bee33165ee91c458a
-EBUILD natsort-3.2.0.ebuild 543 SHA256 aedb0b255a55c363721006314049b7c5de88fb9f64dc0d96bd5dd5d487d4f5a2 SHA512 93aa96632927ebe1c470057ea33c49153e16a4d9edc5268be5f9ab1bbaf9fc9b3d3a8a911c54861e07839d72700d4a94f87878b84c4ce22c7d01bfe3b1d8af6f WHIRLPOOL e13acce4817b73faf1b8a353e8d0126a68e9c486a3dc58660c60f48fc2aa7c0e7df25ba197781124a2e865d3a541b70c7c42cd6ee61e8d8bf72bc3a911b58e7b
-MISC ChangeLog 406 SHA256 4bffb573d5ec485c8287b3e6c0e2016d9f3efb1355f9d74747b93b373e80029e SHA512 9bd614c509ac8a4e5353b0bd8a0ea9d47fa43daa6b11ba013023804c9b8869cd79d52e8b0ade44a4c0efda3cbef1fff5a3fcbb783cd27670bd27ad305b9b61a2 WHIRLPOOL 748eeb61e3f1280c318924874699f5b817e66c4e4d4075ec0e633c570a5ab23a291c18f398dd73ce6862b6d6ea9d7e6cea516f8ff1a071950a6f7e194718b28f
+EBUILD natsort-3.2.0.ebuild 549 SHA256 d1c1d7712b5dd72c9d88a61130ded29554fffd1633f4905a73d3780f71f7d5b3 SHA512 f3954c38bdefb347ce0311ff1d0589a7911d067b648f245b82d1c2aae7b47b9c4f2bfa2673d790a9e2e89276726a6aa83711cfef023d9fe902e4f9202a0b2731 WHIRLPOOL 109ab99262c538ec35e703764e15ca954f6dc55f811cd0fc5950720258f137ec838c40dd4942d383ea64c9ad0f7b7957252a6df6a1a070e513bb9a5d12a42de9
+MISC ChangeLog 535 SHA256 8abd8f451f872b2f1cbddcd1512440cae35229f81fc09d52f024e50263e8438a SHA512 3a6d371d347ef58bd50db0e61727941cc0c4a7a10751d900701390052aa75db34bc8a81cd3fd31a204aaf8b76509ac5bfc08fe0e5246ed77fd22c40a7d1de918 WHIRLPOOL 1285cd29b34c2d44b95da47f6fcab0f1b446e29bd7f86365a462dac48875b3931de5a01621ba18dcf572a8ba02deacfcc5df749745805b44b9e5dcb137619a7a
 MISC metadata.xml 167 SHA256 a96c7a7081b1a192fc4758c24f63e3f458ce37c90ef5594005e91e01a5daf934 SHA512 05f506754bd3182ba88befefe0609d354f9ee335bea2d866f30719b292ebae30dbe64d6c68ff1a918bfd380bd638146b30754d072229491e8ed6f9d6745510c9 WHIRLPOOL 59ac07478ebcd8bb8b5edba5af0041df85949cf69083c3aae6945e371e6b79c6c92e2bd21189b2d8a87de72c9a4cd299e0773ff73332e247f95b8e850a76d054
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOQUhYACgkQso7CE7gHKw00WgCgwsM6tkLSDZd0Wz3fMLkWK+Fd
-B3sAoN2E8Fw4WUD6GZHBBwv2kHzyDx5R
-=ztlg
+iEYEAREIAAYFAlORMBEACgkQso7CE7gHKw2q7wCaA3om8EupTBEeyVau3BzQZfV0
+6J8An2ki7ApI1tVsaiDizl+B7Lsre1wv
+=+VMn
 -----END PGP SIGNATURE-----
