@@ -3,9 +3,10 @@ DEPEND=app-arch/xz-utils
 DESCRIPTION=Utility to change the OpenCL implementation being used
 EAPI=4
 HOMEPAGE=http://www.gentoo.org/
+KEYWORDS=~amd64 ~ppc ~x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=>=app-admin/eselect-1.2.4
 SLOT=0
 SRC_URI=https://github.com/anyc/opencl-headers/archive/opencl-headers-1.2.tar.gz http://dev.gentoo.org/~xarthisius/distfiles/eselect-opencl-1.1.0-r1.tar.xz
 _eclasses_=multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=7c35f76f275191d90f3e07143c1970cd
+_md5_=d7fbd7943ab76864eed700b389adf5c8
