@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/eselect-opencl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-opencl/ChangeLog,v 1.10 2014/06/04 02:47:55 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-opencl/ChangeLog,v 1.11 2014/06/06 03:23:03 patrick Exp $
+
+  06 Jun 2014; Patrick Lauer <patrick@gentoo.org>
+  eselect-opencl-1.1.0-r2.ebuild:
+  Add keywords, close #496418
 
   04 Jun 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Take over as maintainer
